@@ -2571,6 +2571,7 @@ Ms Pac-Man (Stella extended codes):
 				<tr><td>E0 </td><td>8K Parker Bros </td></tr>
 				<tr><td>E7 </td><td>16K M-network </td></tr>
 				<tr><td>EF </td><td>64K Homestar Runner </td></tr>
+				<tr><td>EFSC </td><td>64K Homestar Runner + ram</td></tr>
 				<tr><td>F4 </td><td>32K Atari </td></tr>
 				<tr><td>F4SC </td><td>32K Atari + ram </td></tr>
 				<tr><td>F6 </td><td>16K Atari </td></tr>
